--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Hashtag identifieren</title>
+  <style>
+    body {
+      background-color: #f5f5f5;
+    }
+
+    .app-container {
+      position: relative;
+    }
+    .popper {
+      position: absolute;
+      top: 50px;
+      left: 50px;
+      right: 50px;
+      z-index: 3;
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, rerum.</h1>
+  <div class="container">
+    <h1 class="text-capitalize text-center mt-3">instagram Hashtags searcher</h1>
+    <div class="app-container mt-5">
+<div class="input-group flex-nowrap">
+  <input id="userinput" type="text" class="form-control" placeholder="search for IG hashtag e.g IDAfrica">
+  <button type="submit" class="btn text-white ms-3 bg-success">Search</button>
+</div>
+<hr>
+<div class="popper bg-secondary w-50 mx-auto text-white p-3 rounded">
+  Lorem ipsum dolor
+</div>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
